--- a/main.html
+++ b/main.html
@@ -4,26 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style_main.css">
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-  <title>Home</title>
+  <link rel="icon" href="img/favicon-96x96.png" type="image/x-icon">
+  <title>Anthony BKT - Home</title>
 </head>
 <body>
   
   <!-- CHANGEMENT DE BODY -->
   <div class="body2">
+
+    <!-- HEADER + NAVBAR -->
     <div class="head">
-      <h1>NOM DU SITE</h1>
+      <h1>Anthony Bryckaert</h1>
     </div>
     <nav class="navbar">
       <ul>
-        <li><a href="#"><button>NOM du boutton</button></a></li>
-        <li><a href="#"><button>NOM du boutton2</button></a></li>
-        <li><a href="#"><button>NOM du boutton3</button></a></li>
-        <li><a href="#"><button>NOM du boutton4</button></a></li>
-        <li><a href="#"><button>NOM du boutton5</button></a></li>
+        <li><a href="#"><button>Accueil</button></a></li>
+        <li><a href="#"><button>Connexion</button></a></li>
+        <li><a href="#"><button>Inscription</button></a></li>
+        <li><a href="#"><button>Ma chaine YT</button></a></li>
+        <li><a href="#"><button>Contact Pro</button></a></li>
       </ul>
     </nav>
+    <!--  -->
+
+    <!-- MAIN PAGE -->
+    <div class="main">
+      <p class="paragraphe">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eaque, odio cum cupiditate eum eos aspernatur a distinctio, ipsam libero molestias iste et quidem optio, atque placeat non accusantium totam.
+      </p>
+
+    </div>
+
+    <!--  -->
   </div>
+
 
   
   <!--  -->
