--- a/main.html
+++ b/main.html
@@ -1,47 +1,70 @@
+<!-- PENSER A METTRE DES CLASS="" PR LES UL LI -->
+
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style_main.css">
-  <link rel="icon" href="img/favicon-96x96.png" type="image/x-icon">
-  <title>Anthony BKT - Home</title>
-</head>
-<body>
-  
-  <!-- CHANGEMENT DE BODY -->
-  <div class="body2">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style_main.css" />
+    <link rel="icon" href="img/favicon-96x96.png" type="image/x-icon" />
+    <title>Anthony BKT - Home</title>
+  </head>
+  <body>
+    <!-- CHANGEMENT DE BODY -->
+    <div class="body2">
+      <!-- HEADER + NAVBAR -->
+      <div class="head">
+        <h1>Anthony Bryckaert</h1>
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li>
+            <a href="#"><button>Accueil</button></a>
+          </li>
+          <li>
+            <a href="#"><button>Connexion</button></a>
+          </li>
+          <li>
+            <a href="#"><button>Inscription</button></a>
+          </li>
+          <li>
+            <a href="#"><button>Ma chaine YT</button></a>
+          </li>
+          <li>
+            <a href="#"><button>Contact Pro</button></a>
+          </li>
+        </ul>
+      </nav>
+      <!--  -->
 
-    <!-- HEADER + NAVBAR -->
-    <div class="head">
-      <h1>Anthony Bryckaert</h1>
+      <!-- MAIN PAGE -->
+      <div class="main">
+        <p class="paragraphe">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eaque,
+          odio cum cupiditate eum eos aspernatur a distinctio, ipsam libero
+          molestias iste et quidem optio, atque placeat non accusantium totam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium,
+          ipsam aliquam? Officia voluptate repudiandae perferendis voluptates
+          aperiam rerum. Illum ducimus impedit dicta eveniet enim libero quia
+          veniam esse. Rerum, ipsa! Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Optio explicabo maiores molestias ipsa eos est eum
+          perspiciatis nisi, nulla eligendi impedit quod dolore at dolor a sequi
+          adipisci aliquam corrupti.
+        </p>
+        <p class="paragraphe">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          neque ducimus, doloribus consequuntur accusamus enim sed delectus
+          aliquam, rerum iste sequi aut beatae labore earum, dicta vitae minima
+          nostrum quas. Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Illum, ea nulla debitis est cumque voluptas similique corporis
+          sunt quia quam adipisci, eum laboriosam unde exercitationem quos
+          quaerat, nisi temporibus eius.
+        </p>
+      </div>
+
+      <!--  -->
     </div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#"><button>Accueil</button></a></li>
-        <li><a href="#"><button>Connexion</button></a></li>
-        <li><a href="#"><button>Inscription</button></a></li>
-        <li><a href="#"><button>Ma chaine YT</button></a></li>
-        <li><a href="#"><button>Contact Pro</button></a></li>
-      </ul>
-    </nav>
-    <!--  -->
-
-    <!-- MAIN PAGE -->
-    <div class="main">
-      <p class="paragraphe">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eaque, odio cum cupiditate eum eos aspernatur a distinctio, ipsam libero molestias iste et quidem optio, atque placeat non accusantium totam.
-      </p>
-
-    </div>
 
     <!--  -->
-  </div>
-
-
-  
-  <!--  -->
-
-
-</body>
+  </body>
 </html>
